<resources>
    <string name="app_name">PetLovers</string>
    <string name="welcome">Bem vindo, Lucas!</string>
    <string name="resume">Use este espaço para anotar tudinho sobre o seu pet. Configure lembretes sobre todos os eventos e datas importantes do seu fofinho.</string>
    <string name="name">Nome</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="resetpass">Esqueceu a senha? Resete aqui!</string>
    <string name="reset">Resetar senha</string>
    <string name="backlogin">Retornar para Login.</string>
    <string name="email">Email</string>
    <string name="pets">Pets cadastrados:</string>
    <string name="petname1">Snow</string>
    <string name="petname2">Lilica</string>
    <string name="addpet">Adicionar Pet</string>
    <string name="logout">Sair</string>
    <string name="back">Voltar</string>
    <string name="hist">Histórico de eventos</string>
    <string name="next">Próximos</string>
    <string name="addevent">Adicionar Evento</string>
    <string name="desc"></string> <!-- FIXME -->
    <string name="agenda">Agenda</string>
    <string name="add">Adicionar</string>
    <string name="reminder1">30/04/2018 - Vacina</string>
    <string name="reminder2">07/05/2018 - Passeio</string>
    <string name="before">Anteriores</string>
    <string name="birthday">30/12/2017 - Aniversário Snow</string>
    <string name="inputeventname">Nome do evento</string>
    <string name="inputeventdesc">Descrição</string>
    <string name="inputeventlocalname">Local</string>
    <string name="inputeventdate">Data</string>
    <string name="inputpetname">Nome do pet</string>
    <string name="inputpetage">Idade do pet</string>
</resources>