<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/primary_dark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:src="@drawable/ic_left_arrow" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_ki" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/petname1"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:fontFamily="casual"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_eventname"
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/inputeventname"
                            android:inputType="text"
                            android:fontFamily="casual"/>
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_localname"
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/inputeventlocalname"
                            android:inputType="text"
                            android:fontFamily="casual"/>
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_desc"
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/inputeventdesc"
                            android:inputType="text"
                            android:fontFamily="casual"/>
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_hour"
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/inputeventdate"
                            android:inputType="text"
                            android:fontFamily="casual"/>
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></android.support.design.widget.TextInputLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_addevent"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginBottom="17dp"
            android:padding="20dp"
            android:text="@string/add"
            android:fontFamily="casual"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark">
    </LinearLayout>

</LinearLayout>