<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/primary_dark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:src="@drawable/ic_left_arrow" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_ki" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/petname1"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:fontFamily="casual"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_span="3"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/before"
            android:textColor="@color/red"
            android:textSize="20dp"
            android:fontFamily="casual"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_cake" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:padding="18dip"
                    android:text="@string/birthday"
                    android:textColor="#000"
                    android:textSize="19dp"
                    android:fontFamily="casual"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark">
    </LinearLayout>
</LinearLayout>