<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/primary_dark"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="95dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:src="@drawable/ic_veterinarian" />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_petname"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputpetname"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/input_petage"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputpetage"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <Button
                        android:id="@+id/btn_addpet2"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="34dp"
                        android:layout_marginTop="24dp"
                        android:padding="12dp"
                        android:layout_gravity="center"
                        android:text="@string/add" />
                </android.support.design.widget.TextInputLayout>
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_dark"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/white"
            app:menu="@menu/activity_menu" />

    </LinearLayout>


</LinearLayout>