<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/primary_dark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_ki" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/petname"
            android:textColor="@color/white"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/next"
                android:layout_span="3"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/red"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_reminder" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/reminder1"
                        android:layout_span="3"
                        android:padding="18dip"
                        android:textColor="#000"/>
                </TableRow>

                <TableRow
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginTop="26dp"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/reminder2"
                        android:layout_span="3"
                        android:padding="18dip"
                        android:textColor="#000"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_addevent2"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:text="Adicionar evento" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@color/primary_dark" >

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Voltar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_hist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_timeline" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Histórico" />
        </LinearLayout>

    </RelativeLayout>



</LinearLayout>